# Neuraaaa

./: .gitignore  METADATA_FEATURE.md  MULTITAB_FEATURES.md  VAULT_ARCHITECTURE.md  VAULT_FORMAT_SPEC.md  VAULT_IMPLEMENTATION_GUIDE.md  VAULT_USER_GUIDE.md  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vite.config.ts
ai_backend/: ai_utils.py  app.py
src/: App.tsx  index.css  ipc.ts  types.ts
src-tauri/: Cargo.toml  rename_history.csv  tauri.conf.json
src-tauri/.vault/: main.vault
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/python/: renamer.py  todorenamer.py
src-tauri/src/: content_scanner.rs  duplicate_detector.rs  file_preview.rs  main.rs  search.rs  vault.rs
src-tauri/src/filesystem/: cache.rs  clipboard.rs  explorer.rs  folder_tree.rs  mod.rs  volume.rs
src/components/: DragDropZone.tsx  DuplicateDetectorModal.tsx  DuplicateSearchProgressModal.tsx  FileMetadata.tsx  FilePreview.tsx  FileRenamerModal.tsx  FolderPreview.tsx  FolderTreeSidebar.tsx  InputModal.tsx  RecentFiles.tsx  SensitiveFileSuggestions.tsx  SettingsModal.tsx  TabBar.tsx  Toast.tsx  VaultModal.tsx  VaultTrigger.tsx  VoiceCommandHelp.tsx  VoiceInput.tsx
src/components/ContextMenus/: ContextMenu.tsx  ContextMenus.tsx
src/components/MainBody/: DirectoryContents.tsx  DirectoryEntity.tsx  DuplicateDetector.tsx
src/components/MainBody/Util/: LoadingPlaceholder.tsx
src/components/MainBody/Volumes/: VolumeComponent.tsx
src/components/TopBar/: FolderNavigation.tsx  SearchBar.tsx  SearchFilter.tsx
src/hooks/: useContextMenu.ts  useNavigation.ts
src/lib/: utils.ts
src/state/: store.ts
src/state/constants/: constants.ts
src/state/slices/: contextMenuSlice.ts  settingsSlice.ts  tabsSlice.ts
src/ui/: Button.tsx  Input.tsx  utils.ts
src/utils/: voiceCommandParser.ts  voicePatterns.ts
