[package]
name = "file-explorer"
version = "1.0.0"
description = "File Explorer"
authors = ["Conaticus", "ProtogenDelta", ]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
walkdir = "2.3.3"
fuzzy-matcher = "*"
chrono = "0.4"
rayon = "1.7.0"
dirs = "6.0.0"
notify = "8.2.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_bencode = "0.2.3"
zstd = "0.13.3"
lazy_static = "1.4.0"
open = "5.0.0"
thiserror = "2.0.16"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-shell = "2.2.0"
sha2 = "0.10.9"
base64 = "0.21"
zip = "0.6"
regex = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
